--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
 	<title>6.11 League Neural Network</title>
 
-	<link rel="icon" type="image/png" href="../shared/d/d.png">
+	<link rel="icon" type="image/png" href="shared/d/d.png">
 
-	<script type="text/javascript" src="../shared/jquery/jquery-1.9.1.js"></script>
-	<script type="text/javascript" src="../shared/jquery/jquery-migrate-1.2.1.js"></script>
-	<script type="text/javascript" src="../shared/jquery/jquery-ui.js"></script>
+	<script type="text/javascript" src="shared/jquery/jquery-1.9.1.js"></script>
+	<script type="text/javascript" src="shared/jquery/jquery-migrate-1.2.1.js"></script>
+	<script type="text/javascript" src="shared/jquery/jquery-ui.js"></script>
 	<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 
-	<script type="text/javascript" src="../shared/multiple-select/multiple-select.js"></script>
-	<link rel="stylesheet" type="text/css" href="../shared/multiple-select/multiple-select.css">
+	<script type="text/javascript" src="shared/multiple-select/multiple-select.js"></script>
+	<link rel="stylesheet" type="text/css" href="shared/multiple-select/multiple-select.css">
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 
