--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
 
 		<div id="controls">
 			<div>
-				<h3>Division:
-					<select id="division" onchange="stop()"></select>
-				</h3>
+				<h3>Division:</h3>
+				<select id="division" onchange="stop()"></select>
 			</div>
 
 			<div>
