--- a/index.html
+++ b/index.html
@@ -74,5 +74,9 @@
 				Status: <span id="status">Idle</span>
 			</div>
 		</div>
+
+		<div id="results">
+			<h1>Results</h1>
+		</div>
 	</body>
 </html>
