--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 
-	<script type="text/javascript" src="js/game.js"></script>
+	<script type="text/javascript" src="js/games.js"></script>
 	<script type="text/javascript" src="js/design.js"></script>
 	<script type="text/javascript" src="js/process.js"></script>
 
