--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<script type="text/javascript" src="js/games.js"></script>
+	<script type="text/javascript" src="js/networks.js"></script>
 	<script type="text/javascript" src="js/design.js"></script>
 	<script type="text/javascript" src="js/process.js"></script>
 
