--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 			<div>
 				<h3>Division:</h3>
 				<select id="division" onchange="stop()"></select>
+				<h3>Team:</h3>
+				<select id="team" onchange="stop()">
+					<option value="blue">Blue</option>
+					<option value="red">Red</option>
+				</select>
 			</div>
 
 			<div>
@@ -54,15 +59,15 @@
 			<div id="slider-div">
 				<div>
 					<h3>Depth</h3>
-					<div id="depth" class="slider" data-range="1,10,1"></div>
+					<div id="depth" class="slider" data-range="1,10,1" onchange="stop()"></div>
 				</div>
 				<div>
 					<h3>Memory</h3>
-					<div id="memory" class="slider" data-range="10,100,10"></div>
+					<div id="memory" class="slider" data-range="10,100,10" onchange="stop()"></div>
 				</div>
 				<div>
 					<h3>Pruning Factor</h3>
-					<div id="pruning" class="slider" data-range="0,100,25"></div>
+					<div id="pruning" class="slider" data-range="0,100,25" onchange="stop()"></div>
 				</div>
 			</div>
 
@@ -78,6 +83,7 @@
 
 		<div id="results">
 			<h1>Results</h1>
+			<div id="results-container"></div>
 		</div>
 	</body>
 </html>
