--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 
-	<script type="text/javascript" src="js/games.js"></script>
-	<script type="text/javascript" src="js/networks.js"></script>
 	<script type="text/javascript" src="js/design.js"></script>
 	<script type="text/javascript" src="js/process.js"></script>
+	
+	<script type="text/javascript" src="networks/league/info.json"></script>
+
+	<script type="text/javascript" src="js/loadNetworks.js"></script>
 
 	<body>
 		<div id="background"></div>
