not sure if works...

--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 	<script type="text/javascript" src="js/design.js"></script>
 	<script type="text/javascript" src="js/process.js"></script>
 	
-	<script type="text/javascript" src="networks/league/info.json"></script>
-
 	<script type="text/javascript" src="js/loadNetworks.js"></script>
 
 	<body>
@@ -74,8 +72,8 @@
 			</div>
 
 			<div>
-				<button id="start" onclick="start()">Start</button>
-				<button id="stop" onclick="stop()" disabled>Stop</button>
+				<button id="start">Start</button>
+				<button id="stop" disabled>Stop</button>
 			</div>
 
 			<div id="status-div">
