--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<script type="text/javascript" src="js/design.js"></script>
-	<script type="text/javascript" src="js/process.js"></script>
+	<script type="text/javascript" src="js/search.js"></script>
 	
 	<script type="text/javascript" src="js/loadNetworks.js"></script>
 
@@ -63,7 +63,7 @@
 				</div>
 				<div>
 					<h3>Memory</h3>
-					<div id="memory" class="slider" data-range="10,100,30"></div>
+					<div id="memory" class="slider" data-range="20,100,20"></div>
 				</div>
 				<div>
 					<h3>Pruning Factor</h3>
