--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 				<div class="picks"></div>
 			</div>
 
-			<div id="champ-pool"></div>
+			<div id="champ-pool-container">
+				<div id="champ-pool"></div>
+			</div>
 
 			<div class="team" id="red-team">
 				<div class="picks"></div>
