--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 	<script type="text/javascript" src="shared/jquery/jquery-1.9.1.js"></script>
 	<script type="text/javascript" src="shared/jquery/jquery-migrate-1.2.1.js"></script>
-	<script type="text/javascript" src="shared/jquery/jquery-ui.js"></script>
-	<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+	<script type="text/javascript" src="shared/jquery/jquery-ui-1.12.0/jquery-ui.js"></script>
+	<link rel="stylesheet" href="shared/jquery/jquery-ui-1.12.0/jquery-ui.css">
 
 	<script type="text/javascript" src="shared/multiple-select/multiple-select.js"></script>
 	<link rel="stylesheet" type="text/css" href="shared/multiple-select/multiple-select.css">
