--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
 					</tr>
 				</table>
 			</div>
+
+			<div id="contact">
+				<h1>Contact</h1>
+				<div>Send comments, requests, and bugs to <span>dcep93@gmail.com</span></div>
+			</div>
 		</div>
 	</body>
 </html>
