changes I shouldve made a LONG time ago

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 					</div>
 					<div>
 						<h3>Pruning Factor</h3>
-						<div class="tooltip">Proportion of branches to ignore at each level of the tree. Branches that have a low score at the current depth will not be searched further, evaluated recursively.</div>
-						<div id="pruning" class="slider" data-range="0,90,15" modifier="%"></div>
+						<div class="tooltip">Proportion of branches to ignore at each level of the tree. Branches that have a low score at the current depth will not be searched further, evaluated recursively. Increasing this value significantly reduces search time.</div>
+						<div id="pruning" class="slider" data-range="0,90,15" data-start="30" data-modifier="%"></div>
 					</div>
 				</div>
 
@@ -101,6 +101,11 @@
 						<th>Duration</th>
 					</tr>
 				</table>
+			</div>
+
+			<div id="description">
+				<h1>Description</h1>
+				<div>WHAT DO I WRITE HERE</div>
 			</div>
 
 			<div id="contact">
