--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<div id="controls">
 				<div>
 					<h3>Division:</h3>
-					<select id="division" onchange="stop()"></select>
+					<select id="division"></select>
 					<h3>Team:</h3>
 					<select id="team">
 						<option value="blue">Blue</option>
@@ -106,6 +106,11 @@
 			<div id="description">
 				<h1>Description</h1>
 				<div>WHAT DO I WRITE HERE</div>
+			</div>
+
+			<div id="how-to-use">
+				<h1>How to Use</h1>
+				<div>WHAT DO I WRITE HERE pt 2</div>
 			</div>
 
 			<div id="contact">
