bucket text description - need to add header w/ links and organize controls/champ select

--- a/complete/index.html
+++ b/complete/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<title>6.11 League Neural Network</title>
+	<title>/league</title>
 
 	<link rel="icon" type="image/png" href="../shared/d/d.png">
 
