Revert "bucket text description - need to add header w/ links and organize controls/champ select"
This reverts commit 4075070ba183152484163957946b43dfa2a80b76.

--- a/complete/index.html
+++ b/complete/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<title>/league</title>
+	<title>6.11 League Neural Network</title>
 
 	<link rel="icon" type="image/png" href="../shared/d/d.png">
 
