mostly scrap j beezy - too different

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<title>6.11 League Neural Network</title>
+	<title>/ league</title>
 
 	<link rel="icon" type="image/png" href="shared/d/d.png">
 
@@ -27,12 +27,8 @@
 	<body>
 		<div id="background"></div>
 
-		<div id="logo-container1">
-			<div id="logo-container2">
-				<div id="logo" class="courier-new">
-					/league
-				</div>
-			</div>
+		<div id="logo" class="courier-new section">
+			/league
 		</div>
 
 		<div id="champ-select">
