content max width

--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
 	<body>
 		<div id="background"></div>
 
-		<div id="logo" class="courier-new section">
-			/league
-		</div>
-
-		<div id="champ-select">
-			<div class="team" id="blue-team">
-				<div class="picks"></div>
+		<div id="content">
+			<div id="logo" class="courier-new section">
+				/league
 			</div>
 
-			<div id="champ-pool-container">
-				<div id="champ-pool"></div>
+			<div id="champ-select">
+				<div class="team" id="blue-team">
+					<div class="picks"></div>
+				</div>
+
+				<div id="champ-pool-container">
+					<div id="champ-pool"></div>
+				</div>
+
+				<div class="team" id="red-team">
+					<div class="picks"></div>
+				</div>
 			</div>
 
-			<div class="team" id="red-team">
-				<div class="picks"></div>
-			</div>
-		</div>
+			<div id="splash-bank"></div>
 
-		<div id="splash-bank"></div>
-
-		<div>
 			<div class="section">
 				<div id="controls">
 					<div class="control-container">
