more fixes... still need to style results lol

--- a/index.html
+++ b/index.html
@@ -195,11 +195,8 @@
 						</li>
 					</ul>
 				</div>
-				<div id="privacy">
-					Privacy Policy coming soon
-				</div>
-				<div id="copyright">
-					Copyright coming soon
+				<div id="tos">
+					Terms of Service Coming Soon
 				</div>
 			</div>
 		</div>
