--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 					<h1 class="courier-new">Contact</h1>
 					<ul class="text">
 						<li>Send comments, requests, questions, and bugs to <span>dcep93@gmail.com</span></li>
+						<li>You can also submit feedback using this box:&nbsp;<input id="feedback" /></li>
 						<li>
 							If you can see this, the site is in construction! I'm looking for any and all tips out there, but primarily looking for suggestions on
 							<ul>
