--- a/index.html
+++ b/index.html
@@ -195,6 +195,9 @@
 					<h1 class="courier-new">Terms of Service</h1>
 					<ul class="text">
 						<li>Coming Soon</li>
+						<li>
+							<span class="courier-new">/league</span> isn't endorsed by Riot Games and doesn't reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.
+						</li>
 					</ul>
 				</div>
 			</div>
