not league-private

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<script src="shared/firebase/firebase-app.js"></script>
 	<script src="shared/firebase/firebase-database.js"></script>
 
-	<script type="text/javascript" src="league-private/js/design.js"></script>	
+	<script type="text/javascript" src="js/design.js"></script>	
 	<script type="text/javascript" src="js/loadNetworks.js"></script>	
 
 	<link rel="stylesheet" type="text/css" href="style.css">
